--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
 	"license": "ISC",
 	"dependencies": {
 		"cors": "^2.8.5",
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"leaflet": "^1.9.3"
 	},
 	"devDependencies": {
 		"@types/cors": "^2.8.13",
